--- a/package.json
+++ b/package.json
@@ -48,13 +48,13 @@
     "html-pdf-node": "^1.0.8",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "15.2.4",
+    "next": "^16.1.1",
     "next-themes": "^0.4.4",
     "nodemailer": "^7.0.3",
     "pdfkit": "^0.17.1",
-    "react": "^19",
+    "react": "^19.2.3",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "react-slick": "^0.30.3",
