--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "framer-motion": "latest",
     "html-pdf-node": "^1.0.8",
     "input-otp": "1.4.1",
+    "jspdf": "^4.0.0",
     "lucide-react": "^0.454.0",
     "next": "^16.1.1",
     "next-themes": "^0.4.4",
